# MasterThesis

./: .project  .texlipse  CMakeLists.txt  Makefile  README.md  mainpage.dox
DepthImageAnalyzer/: CMakeLists.txt  mainpage.dox  package.xml
DepthImageAnalyzer/include/DepthImageAnalyzer/: MousePressCatcher.hpp  depthimageanalyzer.hpp  moc_qnode.cxx
DepthImageAnalyzer/src/: MousePressCatcher.cpp  depthimageanalyzer.cpp  main.cpp  qnode.cpp
DepthImageAnalyzer/ui/: depthimageanalyzer.ui
Doc/: .project  .texlipse
Doc/src/: 0_main.tex  mybib.bib
Doc/src/Conclusion/: conclusion.tex
Doc/src/Software/: software.tex
Doc/src/img/: htw.eps
Presentation/: .project  .texlipse
Presentation/nonLatex/: DifferenceForegoing.ods  Kinectvalues.csv  herontest.ods  kinectStepLUT.txt  kinect_stats.ods  kinect_stats_2.csv  kinect_stats_2.ods
Presentation/src/: VLKlauck.cls  presentation.tex
Presentation/tmp/: document.aux
Presentation/tmp/src/: presentation.aux
aa_signs/: CMakeLists.old.txt  CMakeLists.txt  Makefold  mainpage.dox  manifest.xml  package.xml
aa_signs/cfg/: signDetection.cfg  signDetection.cfgc
aa_signs/cfg/cpp/aa_signs/: signDetectionConfig.h
aa_signs/data/: lut_gen.sh
aa_signs/docs/: signDetectionConfig-usage.dox  signDetectionConfig.dox  signDetectionConfig.wikidoc
aa_signs/include/: ArcCosValues  kinectStepLUT
aa_signs/include/KinectTools/: KinectTools.hpp  tmpMatch.hpp
aa_signs/launch/: debug_base.launch  debug_detect.launch  signDetect.launch  signs_teleop.launch
aa_signs/settings/: signs.xml
aa_signs/src/: signDetection.cpp
aa_signs/src/KinectTools/: KinectTools.cpp  tmpMatch.cpp
aa_signs/src/aa_signs/cfg/: signDetectionConfig.py
htwAalen_Signs/: stack.xml
htwAalen_Signs/DepthImageAnalyzer/: CMakeLists.txt  manifest.xml  rosbuild.cmake
htwAalen_Signs/DepthImageAnalyzer/include/DepthImageAnalyzer/: depthimageanalyzer.hpp  moc_MousePressCatcher.cxx  moc_depthimageanalyzer.cxx  moc_qnode.cxx  qnode.hpp
htwAalen_Signs/DepthImageAnalyzer/src/: MousePressCatcher.cpp  depthimageanalyzer.cpp  qnode.cpp
htwAalen_Signs/DepthImageAnalyzer/ui/: depthimageanalyzer.ui
htwAalen_Signs/htwAalen_signDetect/: CMakeLists.txt  manifest.xml  old code
htwAalen_Signs/htwAalen_signDetect/cfg/: disturbance_filter_calibrator.cfg  disturbance_filter_calibrator.cfgc  toCompress.cfg  toCompress.cfgc
htwAalen_Signs/htwAalen_signDetect/cfg/cpp/htwAalen_signDetect/: disturbance_filter_calibratorConfig.h  toCompressConfig.h
htwAalen_Signs/htwAalen_signDetect/data/: lut_gen.sh
htwAalen_Signs/htwAalen_signDetect/include/: DiscreteFillAndSmoothFilter.h  kinectStepLUT  kinectStepLUT.h
htwAalen_Signs/htwAalen_signDetect/includes/: DiscreteFillAndSmoothFilter.h
htwAalen_Signs/htwAalen_signDetect/launch/: disturbance_filter_calibrator.launch  signDetect.launch  signDetectNode.launch  test.launch
htwAalen_Signs/htwAalen_signDetect/src/: DiscreteFillAndSmoothFilter.cpp  disturbance_filter_calibrator.cpp  fetchDisturbance.cpp  fromCompress.cpp  surfaceDetect.cpp  toCompress.cpp  toCompressFromCompress.cpp
htwAalen_Signs/htwAalen_signDetect/src/htwAalen_signDetect/cfg/: disturbance_filter_calibratorConfig.py  toCompressConfig.py
htwAalen_signDetect/: CMakeLists.old.txt  CMakeLists.txt  package.xml
htwAalen_signDetect/cfg/: disturbance_filter_calibrator.cfg
htwAalen_signDetect/cfg/cpp/htwAalen_signDetect/: toCompressConfig.h
htwAalen_signDetect/data/: Kinectvalues
htwAalen_signDetect/include/: frequency.hpp
htwAalen_signDetect/launch/: signDetectNode.launch
htwAalen_signDetect/src/: DiscreteFillAndSmoothFilter.cpp  disturbance_filter_calibrator.cpp  fromCompress.cpp
htwAalen_signDetect/src/htwAalen_signDetect/cfg/: disturbance_filter_calibratorConfig.py
src/: 0_main.lol  0_main.tex  Ausarbeitung.cls  mybib.bib
src/Conclusion/: conclusion.tex
src/Introduction/: introduction.tex
src/KinectData/: kinectData.tex
src/Mechanical/: mechanical.tex
src/Software/: software.tex
